k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounting-manager
  labels:
    app: accounting-manager
  annotations:
    spot.io/spot-instance: "true"
    spot.io/spot-priority: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounting-manager
  template:
    metadata:
      labels:
        app: accounting-manager
      annotations:
        spot.io/spot-instance: "true"
        spot.io/spot-priority: "1"
    spec:
      containers:
      - name: accounting-manager
        image: elrincondeisma/php-for-laravel:8.3.7
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "192Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
