k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounting-manager
spec:
  selector:
    app: accounting-manager
  ports:
  - port: 80
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
  - port: 3306
    targetPort: 3306
